Mon Sep  1 01:53:52 2008  Minero Aoki  <aamine@loveruby.net>

	* test/test_cbc.sh: run tests for switch stmt.

Mon Sep  1 01:49:23 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: pass location node to the
	  CaseNode explicitly.

	* net/loveruby/cflat/ast/CaseNode.java: default clause does not
	  have value, we cannot extract location node from values.  Receive
	  a location node as a first argument explicitly.

	* net/loveruby/cflat/compiler/CodeGenerator.java: must define end
	  label.

	* net/loveruby/cflat/compiler/CodeGenerator.java: implement
	  default clause.

	* test: test switch stmt.

Mon Sep  1 01:26:20 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: static function
	  should be local in the file.

	* test: test it.

Sun Aug 31 20:09:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/CastNode.java: remove unused method
	  #resolve.

Sun Aug 31 20:02:56 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: better help message.

Sun Aug 31 19:59:35 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/MemberNode.java: has always non-constant
	  address.

	* net/loveruby/cflat/asm/AsmEntity.java: remove method #add.

	* net/loveruby/cflat/asm/Label.java: ditto.

	* net/loveruby/cflat/asm/Reference.java: ditto.

	* net/loveruby/cflat/asm/ImmediateValue.java: ditto.

	* net/loveruby/cflat/asm/Register.java: ditto.

	* net/loveruby/cflat/asm/SimpleAddress.java: ditto.

	* net/loveruby/cflat/asm/CompositeAddress.java: ditto.

	* test: test nested struct member access.

Sun Aug 31 19:40:27 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Function.java: reduce a warning using
	  Reference.

Sun Aug 31 19:24:30 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: transform pointer
	  arithmetic to normal arithmetic (e.g. ptr+7 =>
	  ptr+(7*sizeof(*ptr))).
